Fixing lintian errors and warning messages.
Previously we successfully packaged NVML code, but Lintian had several
warnings and errors that needed to be fixed. In this commit most of the
errors were physically fixed, e.g. appropriate files were slightly modified.
Error messages complaining "source-is-missing" were overridden.

Justin Vreeland:

Since this is packaged as a debian-native package there aren't revision
numbers.  We find this acceptable for ease of packaging.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Tue Jan 26 2016 Zakhar Volchak <zakhar.volchak@hpe.com>
+
+	* version 0.4-2l4tm
+	* MMU
+	Fixing Lintian errors and warnings:
+		- source-is-missing (override)
+		- native-package-with-dash-version (adding debian/source/format)
+		- maintainer-script-lacks-debhelper-token (fix in appropriate files)=
+	Couple more warnings were fixed that I lost track of.
+
+
 Thu Jan 21 2016 Justin Vreeland <justin.mcd.vreeland@hpe.com>
 
 	* version 0.4-l4tm
