--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-nvml (0.4-l4tm) unstable; urgency=medium
+nvml (0.4+l4tm) unstable; urgency=medium
+
+  * Fixing lintian errors and warnings
+
+ -- Zakhar Volchak <zakhar.volchak@hpe.com>  Tue, 26 Jan 2016 11:20:00 -0700
+
+
+nvml (0.4+l4tm) unstable; urgency=medium
 
   * Packaging for arm64 & x86_64 release 0.4.
 
  -- Justin Vreeland <justin.mcd.vreeland@hpe.com>  Thu, 21 Jan 2016 19:58:28 -0700
+
 
 nvml (0.1) unstable; urgency=medium
 
