--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+nvml (0.4.1+l4tm) catapult; urgency=medium
+
+  * Updated packaging
+
+ -- Justin Vreeland <jvreeland@hpe.com>  Wed, 16 Mar 2016 08:46:23 -0700
+
 nvml (0.4.1+l4tm) unstable; urgency=medium
 
   * Fixed instruction that's unavailible in EL0
 
- -- Justin Vreeland <jvreeland@hpe.com>  Fri, 7 Mar 2016 10:14:45 -0700
+ -- Justin Vreeland <jvreeland@hpe.com>  Mon, 7 Mar 2016 10:14:45 -0700
 
 nvml (0.4+l4tm) unstable; urgency=medium
 
