--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 nvml (0.4.1+l4tm) catapult; urgency=medium
 
+  * Updated Packaging
+
+ -- Justin Vreeland <jvreeland@hpe.com>  Fri, 25 Mar 2016 11:25:10 -0600
+
+nvml (0.4.1+l4tm) catapult; urgency=medium
+
   * Updated packaging
 
  -- Justin Vreeland <jvreeland@hpe.com>  Wed, 16 Mar 2016 08:46:23 -0700
